--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "libraries/google-api-php-client"]
 	path = libraries/google-api-php-client
 	url = https://github.com/google/google-api-php-client.git
+[submodule "libraries/iCal4PHP"]
+	path = libraries/iCal4PHP
+	url = https://github.com/City-of-Bloomington/iCal4PHP.git
