Rely on autoloading for CAS
We don't need to hard code the include for the cas library
anymore. In fact, we shouldn't.  Instead we rely on
composer's autoloading.

Updates #141

--- a/data/site_config.inc.example
+++ b/data/site_config.inc.example
@@ -116,13 +116,18 @@ $DIRECTORY_CONFIG = [
  *
  * phpCAS is a PHP library for handling the calls to the CAS service
  * It is the official library, part of the Jasig CAS project
+ *
+ * Comment this out to disable CAS authentication
+ * Uncomment to enable
  */
-//define('CAS', APPLICATION_HOME.'/vendor/jasig/phpcas/source');
 //define('CAS_SERVER','cas.somewhere.org');
 //define('CAS_URI','cas');
 
 /**
  * Auth0 authentication https://auth0.com
+ *
+ * Comment this out to disable Auth0 authentication
+ * Uncomment to enable
  */
 //$AUTH0 = [
 //    'domain'        => 'somewhere.auth0.com',
