Added additional notification flags on people records
We're going to need a seperate flag for each type of
notification we want to send out.

Updates #144
Updates #151

--- a/data/site_config.inc.example
+++ b/data/site_config.inc.example
@@ -135,6 +135,12 @@ $DIRECTORY_CONFIG = [
 //    'client_secret' => 'SECRET API KEY'
 //];
 
+/**
+ * Controls whether the system sends email notifications to people
+ */
+//define('NOTIFICATIONS_ENABLED', true);
+//$NOTIFICATIONS_ADDITIONAL_ADDRESSES = [];
+
 define('DATE_FORMAT', 'n/j/Y');
 define('TIME_FORMAT', 'H:i a');
 define('DATETIME_FORMAT', 'n/j/Y H:i a');
