--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "zendframework/zend-paginator": "~2.5",
         "zendframework/zend-permissions-acl": "~2.5"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^7"
+    },
     "autoload": {
         "psr-4": {"Application\\": "src/Application"}
     }
