--- a/data/site_config.inc.example
+++ b/data/site_config.inc.example
@@ -57,14 +57,16 @@ define('ADMINISTRATOR_EMAIL','admin@servername.com');
 
 /**
  * Database Setup
- * Refer to the PDO documentation for DSN sytnax for your database type
- * http://www.php.net/manual/en/pdo.drivers.php
  */
-define('DB_ADAPTER','Pdo_Mysql');
-define('DB_HOST','localhost');
-define('DB_NAME','application');
-define('DB_USER','application');
-define('DB_PASS','password');
+$DATABASES = [
+    'default' => [
+        'driver'   => 'Pdo_Mysql',
+        'dsn'      => 'mysql:dbname=inroads;host=localhost',
+        'username' => 'user',
+        'password' => 'pass',
+        'options'  => []
+    ]
+];
 
 define('GOOGLE_CREDENTIALS_FILE', __DIR__.'/credentials.json');
 define('GOOGLE_CALENDAR_ID', '--some-calendar-id--@group.calendar.google.com');
