--- a/ansible/templates/inroads.conf
+++ b/ansible/templates/inroads.conf
@@ -1,5 +1,5 @@
-Alias "{{ inroads_base_uri }}" "{{ inroads_path }}/public"
-<Directory "{{ inroads_path }}/public">
+Alias "{{ inroads_base_uri }}" "{{ inroads_install_path }}/public"
+<Directory "{{ inroads_install_path }}/public">
     Options FollowSymLinks
     AllowOverride None
     Require all granted
@@ -9,6 +9,6 @@ Alias "{{ inroads_base_uri }}" "{{ inroads_path }}/public"
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule .? {{ inroads_base_uri }}/index.php [NC,L]
-    
-    SetEnv SITE_HOME {{ inroads_data }}
+
+    SetEnv SITE_HOME {{ inroads_site_home }}
 </Directory>
