--- a/ansible/roles.yml
+++ b/ansible/roles.yml
@@ -1,4 +1,6 @@
 ---
-- src: City-of-Bloomington.mysql
-- src: City-of-Bloomington.php
+- src: 'City-of-Bloomington.linux'
+- src: 'City-of-Bloomington.apache'
+- src: 'City-of-Bloomington.mysql'
+- src: 'City-of-Bloomington.php'
 ...
